test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/basic-delete(deprecated)/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: dictionary-2
  namespace: staging-2
