test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/basic-delete(deprecated)/chainsaw-step-01-apply-1-3.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: test-secret-2
  namespace: staging-2
type: Opaque
