test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/basic-delete(deprecated)/chainsaw-step-01-apply-1-4.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-post-mutation-delete-trigger
spec:
  mutateExistingOnPolicyUpdate: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - ConfigMap
          names:
          - dictionary-2
          namespaces:
          - staging-2
          operations:
          - DELETE
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            foo: '{{ request.object.metadata.name }}'
      targets:
      - apiVersion: v1
        kind: Secret
        name: test-secret-2
        namespace: '{{ request.object.metadata.namespace }}'
    name: mutate-secret-on-configmap-delete
