test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/basic-delete(deprecated)/chainsaw-step-03-assert-1-1.yaml
apiVersion: v1
kind: Secret
metadata:
  labels:
    foo: dictionary-2
  name: test-secret-2
  namespace: staging-2
