test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/basic-delete(deprecated)/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: basic-delete
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
    - apply:
        file: chainsaw-step-01-apply-1-3.yaml
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-post-mutation-delete-trigger
  - name: step-02
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: ConfigMap
          name: dictionary-2
          namespace: staging-2
  - name: step-03
    try:
    - assert:
        file: chainsaw-step-03-assert-1-1.yaml
